<resources>
    <string name="app_name">BestCoin</string>
    <string name="app_name_2">Best Coin</string>

    <!-- Content Descriptions -->
    <string name="splash_screen_icon_holder" translatable="false">splash-screen-icon-holder</string>
    <string name="card_view_image_holder" translatable="false">card_view_image_holder</string>
    <string name="toolbar_layout_image_holder" translatable="false">toolbar_layout_image_holder</string>
    <string name="nav_header_image_holder" translatable="false">nav_header_image_holder</string>
    <string name="currency_details_logo" translatable="false">currency_details_logo</string>

    <!-- Drawer Items -->
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="drawer_items_1">List of Coins</string>
    <string name="drawer_items_2">Markets</string>
    <string name="drawer_items_3">Ticker</string>
    <string name="drawer_items_4">Market Summaries</string>
    <string name="drawer_items_5">Market Summary</string>
    <string name="drawer_items_6">Order Book</string>
    <string name="drawer_items_7">Market History</string>

    <string name="all_rights_reserved" translatable="false">BestCoin © 2017</string>
    <string name="twice_press_to_exit">Press once again to exit</string>
    <string name="loading_text">Loading…</string>

    <!-- Fragment Names -->
    <string name="fragment_coin_list">List of Coins</string>
    <string name="fragment_market">Markets</string>
    <string name="no_connection_text">No Connection</string>
    <string name="no_connection_text2">No internet connection detected. Check your connection or try again.</string>
    <string name="no_connection_btn_text">Try Again</string>
    <string name="fragment_details_text">Detaıls</string>

    <!-- Toast message-->
    <string name="no_connection_error_message">An error occurred. Please check your internet connection and try again.</string>
    <string name="success_message">An error occurred. Please check your internet connection and try again.</string>
    <string name="warning_message">An error occurred. Please check your internet connection and try again.</string>
    <string name="info_message">An error occurred. Please check your internet connection and try again.</string>

    <!-- Detail Fragment Texts -->
    <string name="currency_detail_market_currency">Market Currency:</string>
    <string name="currency_detail_market_name">Market Name:</string>
    <string name="currency_detail_is_active">Is Active:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
