<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/cl_currency_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/apl_currency_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:layout_scrollFlags="scroll|snap">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:tint="@color/colorTint"
                android:src="@drawable/currency_background"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/currency_details_logo" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_currency_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            style="@style/ToolBarWithNavigationBack" />

        <LinearLayout
            android:id="@+id/currency_details_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:gravity="center"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:fontFamily="@font/robotoregular"
                android:text="@string/app_name_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tl_currency_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textColor="@color/colorWhite"
            android:text="@string/fragment_details_text"
            android:fontFamily="@font/robotomedium"
            android:textAllCaps="true"
            android:gravity="center"/>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_currency_detail_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        app:layout_anchor="@id/currency_details_title_container"
        android:elevation="8dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFF"
        app:layout_scrollFlags="scroll"
        app:layout_anchorGravity="top|center_horizontal" />

</android.support.design.widget.CoordinatorLayout>
</layout>